[build-system]
build-backend = "hatchling.build"
requires = [ "hatchling"]

[project]
name = "piaso-tools"
version = "1.0.1"
description = "Precise Integrative Analysis of Single-cell Omics."
requires-python = ">=3.9"
license = "BSD-3-clause"
authors = [
    { name = "Min Dai", email = "dai@broadinstitute.org" }
]
maintainers = [
    { name = "Min Dai", email = "dai@broadinstitute.org" },
    { name = "Vallari Shende", email = "vshende@broadinstitute.org" }
]
readme = "README.md"
classifiers = [
    "License :: OSI Approved :: BSD License",
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Framework :: Jupyter",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
    "anndata>=0.8",
    "scanpy>=1.9.1",
    "cosg>=1.0.3",
    "numpy>=1.21.6",
    "matplotlib>=3.5.2",
    "pandas>=1.4.4",
    "scipy>=1.7.3",
    "seaborn>=0.11.2",
    "tqdm",
    "scikit-learn>=1.1",
    "statsmodels>=0.13.2",
    "typing-extensions",
]

# https://docs.pypi.org/project_metadata/#project-urls
[project.urls]
Documentation = "https://genecell.github.io/PIASO/"
Source = "https://github.com/genecell/PIASO"
Homepage = "https://genecell.github.io/PIASO/"

[project.optional-dependencies]
dev = [
    "pre-commit", # static checking
]

[tool.hatch.build.targets.wheel]
packages = [ "piaso" ]